<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage">

    <androidx.cardview.widget.CardView
        android:id="@+id/about_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/about_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_header"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/about_header"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:layout_margin="5dp"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/about_text"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/copyright"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/wikipedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wikipedia"
                android:layout_margin="5dp"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/wikipedia"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/unsplash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unsplash"
                android:layout_margin="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/patent_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/company"
            android:width="300dp"
            android:id="@+id/patent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patent_text"
            tools:layout_editor_absoluteY="638dp"
            android:textAlignment="center"/>

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/address"
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company" />

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/phoneNr"
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/phoneNr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNr" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>